test/assets/invalid/expect-char.hs
import Data.Char (ord)

a :: Char
a = "a"